Task-Assignment/k8s/service-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry-deployment
  labels:
    app: service-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: anvi522acr.azurecr.io/assign-easy-registry:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry-service
spec:
  selector:
    app: service-registry
  type: NodePort # <-- Changed from ClusterIP to NodePort for external access
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      # nodePort: 30761 # Optional: You can specify a port, or K8s will assign one.
