Task-Assignment/k8s/submission-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submission-service-deployment
  labels:
    app: submission-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submission-service
  template:
    metadata:
      labels:
        app: submission-service
    spec:
      containers:
        - name: submission-service
          image: anvi522acr.azurecr.io/assign-easy-submission:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: submission-service
spec:
  selector:
    app: submission-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
