Task-Assignment/k8s/task-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service-deployment
  labels:
    app: task-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: anvi522acr.azurecr.io/assign-easy-task:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
