Task-Assignment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.52.226.168.61.nip.io # Your domain from the Ingress IP
      secretName: api-tls-secret
  rules:
    - host: api.52.226.168.61.nip.io # Your domain from the Ingress IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
